UV rip gives strange results on some faces #78751

Closed
opened 2020-07-09 03:24:35 +02:00 by Daniel Bystedt · 7 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: 31bc76ea4e

Short description of error
I'm trying out the new UV Rip {80393a0ebadc} that was recently commited by Campbell Barton. It works in most cases, but on some random faces it gives a strange result

uv rip bug.mp4

Example with strange result

{F8679514, height = 300} starting point {F8679517, height = 300} result after RIP UV and move

Other faces that works just fine

{F8679522, height = 300} starting point {F8679527, height = 300} result after RIP UV and move

Exact steps for others to reproduce the error

uv_rip_issue_v001.blend

  • Open the attached .blend
  • select marked faces in 3d view or in UV Editor
  • Press V for UV Rip and move
  • Observe the strange result
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: `31bc76ea4e` **Short description of error** I'm trying out the new UV Rip {80393a0ebadc} that was recently commited by Campbell Barton. It works in most cases, but on some random faces it gives a strange result [uv rip bug.mp4](https://archive.blender.org/developer/F8679512/uv_rip_bug.mp4) **Example with strange result** | {[F8679514](https://archive.blender.org/developer/F8679514/image.png), height = 300} starting point | {[F8679517](https://archive.blender.org/developer/F8679517/image.png), height = 300} result after RIP UV and move| | -- | -- | **Other faces that works just fine** | {[F8679522](https://archive.blender.org/developer/F8679522/image.png), height = 300} starting point | {[F8679527](https://archive.blender.org/developer/F8679527/image.png), height = 300} result after RIP UV and move| | -- | -- | **Exact steps for others to reproduce the error** [uv_rip_issue_v001.blend](https://archive.blender.org/developer/F8679545/uv_rip_issue_v001.blend) - Open the attached .blend - select marked faces in 3d view or in UV Editor - Press V for UV Rip and move - Observe the strange result
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt
Campbell Barton was assigned by Daniel Bystedt 2020-07-09 03:26:22 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

This can be made to work, although it's not really ripping (at least it's using different rules). It would be the same as pressing Y (separate) than G (move).

I'll add this behavior, just noting that it's adding a special case for when faces are selected, compared to edge loop.

This can be made to work, although it's not really ripping (at least it's using different rules). It would be the same as pressing Y (separate) than G (move). I'll add this behavior, just noting that it's adding a special case for when faces are selected, compared to edge loop.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Author
Member

Thanks a lot @campbellbarton. I keep forgetting the "select split" + "move" combination Adding the functionality you mention will help a lot of users I think

Thanks a lot @campbellbarton. I keep forgetting the "select split" + "move" combination Adding the functionality you mention will help a lot of users I think

This issue was referenced by 89cb41faa0

This issue was referenced by 89cb41faa0596d898f850f68c46e2b39c25e6452

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78751
No description provided.